# tornado-svm

./: Cargo.toml  README.md  package.json
.github/workflows/: README.md  build.yml  tornado_testnet_transaction.yml
client/: package.json  tornado-cli.js
docs/: _config.yml  architecture.md  github_actions.md  index.md
docs/algorithms/: commitment-generation.md  index.md  merkle-tree.md  nullifier-hash.md  zksnarks.md
docs/data-structures/: accounts.md  index.md
docs/usage/: index.md  quick-start.md
formal_verification/: CryptoUtilsVerification.v  MerkleTreeVerification.v  README.md  VerifierVerification.v
scripts/: README.md  analyze_transaction_complexity.js  format_report.js  generate_metrics.js  get_merkle_root.js  notification.js  run_tornado_transaction.sh
src/: error.rs  instruction.rs  lib.rs  merkle_tree.rs  processor.rs  state.rs  utils.rs  verifier.rs
tests/: tornado_test.rs
