[package]
name = "tornado-svm"
version = "0.1.0"
edition = "2021"
description = "Solana Tornado Cash Privacy Solution"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_svm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.7"
bytemuck = { version = "1.13.1", features = ["derive"] }
sha3 = "0.10.8"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-relations = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-std = "0.4.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
rand = "0.8.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3